# stacklands-combat-simulator

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  extract.py  index.html  test.py
assets/: index.01647b4d.js  index.0f415522.js  index.16a0f2fe.js  index.9f687182.js  index.be4a51a9.js  index.ccfbd9b2.css  index.dfe12154.css  index.ed8b32d8.css  stacklands_combat_simulator_bg.ccab27af.wasm  worker.34de0b0d.js  worker.5ce2864f.js
src/: js.rs  lib.rs  main.rs
svelte/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
svelte/src/: AddCombatantDialog.svelte  App.svelte  CombatantCard.svelte  CombatantImage.svelte  ResultGraph.svelte  ResultRow.svelte  Results.svelte  SetupEditor.svelte  Sidebar.svelte  SliderWithValue.svelte  StatsTable.svelte  app.css  combatants.ts  simple-modal.d.ts  types.ts  utils.ts  worker.ts
svelte/src/editor/: AddCombatantDialog.svelte  CombatantCard.svelte  CombatantImage.svelte  SetupEditor.svelte  StatsTable.svelte
svelte/src/results/: ResultGraph.svelte  ResultRow.svelte  Results.svelte
svelte/src/sidebar/: Sidebar.svelte  SimulationSettings.svelte  SliderWithValue.svelte  ViewSettings.svelte
svelte/src/wasm/: stacklands_combat_simulator.d.ts  stacklands_combat_simulator.js  stacklands_combat_simulator_bg.js  stacklands_combat_simulator_bg.wasm  stacklands_combat_simulator_bg.wasm.d.ts
